bk_ida/gccida/c3/gen_aux_info_record
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_aux_info_record/src/c-aux-info.c:1051:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_aux_info_record/src/c-aux-info.c:1057:7: error: use of undeclared identifier 'gen_aux_info_record_compiled_from_record'
if ( !gen_aux_info_record_compiled_from_record++ ) 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_aux_info_record/src/obj/c-aux-info.o] Error 1
